--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.16.0"
   }
 }
