--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:dev": "webpack --env mode=development"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.6.3",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
