--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "*": ["./src/*"]
     }
   },
+  "include": ["src", "src/custom.d.ts"],
   "ts-node": {
     "compilerOptions": {
       "module": "CommonJS"
